; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-serve-files.c_destroy_cache_entry.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-mod-serve-files.c_destroy_cache_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cache_entry = type { i32 }
%struct.file_cache_entry = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 (%struct.file_cache_entry*)* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cache_entry*, i8*)* @destroy_cache_entry to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @destroy_cache_entry(%struct.cache_entry* %0, i8* %1) #0 {
  %3 = alloca %struct.cache_entry*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.file_cache_entry*, align 8
  store %struct.cache_entry* %0, %struct.cache_entry** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.cache_entry*, %struct.cache_entry** %3, align 8
  %7 = bitcast %struct.cache_entry* %6 to %struct.file_cache_entry*
  store %struct.file_cache_entry* %7, %struct.file_cache_entry** %5, align 8
  %8 = load %struct.file_cache_entry*, %struct.file_cache_entry** %5, align 8
  %9 = getelementptr inbounds %struct.file_cache_entry, %struct.file_cache_entry* %8, i32 0, i32 0
  %10 = load %struct.TYPE_2__*, %struct.TYPE_2__** %9, align 8
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i32 (%struct.file_cache_entry*)*, i32 (%struct.file_cache_entry*)** %11, align 8
  %13 = load %struct.file_cache_entry*, %struct.file_cache_entry** %5, align 8
  %14 = call i32 %12(%struct.file_cache_entry* %13)
  %15 = load %struct.file_cache_entry*, %struct.file_cache_entry** %5, align 8
  %16 = call i32 @free(%struct.file_cache_entry* %15)
  ret void
}

declare dso_local i32 @free(%struct.file_cache_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
